Title and Abstract for Presentation

--- a/Deliverables/Written Component/main.tex
+++ b/Deliverables/Written Component/main.tex
@@ -34,6 +34,9 @@
 % natbib usage reference: http://merkel.texture.rocks/Latex/natbib.php
 \newpage
 \bibliographystyle{apalike}
-\bibliography{references}
 
-\end{document}}
+\nocite{*}
+
+\bibliography{writingproject.bib}
+
+\end{document}
