--- a/Deliverables/Written Component/writingproject.bib
+++ b/Deliverables/Written Component/writingproject.bib
@@ -52,7 +52,7 @@
 }
 
 @misc{lstmkeras,
-  title = {Time Series Forecasting with RNN(LSTM)| Compelte Python Tutorial|},
+  title = {Time Series Forecasting with RNN(LSTM)| Complete Python Tutorial|},
   url = {https://www.youtube.com/watch?v=S8tpSG6Q2H0},
   author = {Hebbar, Nachiketa},
   year = {2021}
