Presentation, Poster, and changes to scripts

--- a/Deliverables/Written Component/writingproject.bib
+++ b/Deliverables/Written Component/writingproject.bib
@@ -124,3 +124,15 @@ abstract = {Time series clustering has been shown effective in providing useful 
   year = {2015},
   url = {https://colah.github.io/posts/2015-08-Understanding-LSTMs/}
 }
+
+@inproceedings{NIPS2012_05311655,
+ author = {Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {F. Pereira and C.J. Burges and L. Bottou and K.Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Practical Bayesian Optimization of Machine Learning Algorithms},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2012/file/05311655a15b75fab86956663e1819cd-Paper.pdf},
+ volume = {25},
+ year = {2012}
+}
