Updating repo w/ intial writing & updated code

--- a/Deliverables/Written Component/WPROJ.sty
+++ b/Deliverables/Written Component/WPROJ.sty
@@ -30,8 +30,8 @@
 \newcommand{\todo}[1]{\payAttention{red}{TODO}{#1}}
 
 % Identifying information
-\newcommand{\myname}{YOUR NAME HERE}
-\newcommand{\myadvisor}{YOUR ADVISOR'S NAME HERE}
-\newcommand{\wprojcoord}{Andy Hoegh}  % Current Writing Project Coordinator
-\newcommand{\maintitle}{YOUR TITLE HERE}
+\newcommand{\myname}{Eliot Liucci}
+\newcommand{\myadvisor}{Dr. John Smith}
+\newcommand{\wprojcoord}{Dr. Katharine Banner}  % Current Writing Project Coordinator
+\newcommand{\maintitle}{Exploration of Long Short-Term Memory Networks for Time Series Forecasting}
 \newcommand{\mydate}{Date of completion here as Month Day, Year}
