--- a/Deliverables/Written Component/main.tex
+++ b/Deliverables/Written Component/main.tex
@@ -17,17 +17,20 @@
 
 \section{Introduction}\label{sec:intro}
 \input{body/introduction}
-\subsection{This is a Subsection}
-\input{body/introsub} 
-%
-\section{Literature Review}\label{sec:background}
-\input{body/background}
+\subsection{Recurrent Neural Networks}
+\input{body/rnn} 
+\subsection{Long Short-Term Memory Networks}
+\input{body/lstm}
+\subsection{EVER Data}
+\input{body/ever}
 %
 \section{Methods}\label{sec:methods}
 \input{body/methods}
 %
-\section{Conclusion}\label{sec:conclusion}
-\input{body/conclusion}
+\section{Results}\label{sec:results}
+\input{body/results}
+\subsection{Reflection}
+\input{body/reflection}
 
 
 % References
