--- a/Deliverables/Written Component/abstract.tex
+++ b/Deliverables/Written Component/abstract.tex
@@ -1,4 +1,4 @@
 \begin{doublespace}
 % This version of the abstract is for the presentation, likely needs to be updated for final report.
-Long Short-Term Memory (LSTM) networks are a special case of Recurrent Neural Networks (RNN) that allow for effective time-series forecasting by making use of cell states and memory cells to incorporate past time point's information when predicting future values. These methods provide several benefits over traditional methods such as ARIMA models. This presentation explores the introductory results obtained from training and predicting on hydrology data collected within the Everglades National Park.
+Long Short-Term Memory (LSTM) networks are a special case of Recurrent Neural Networks (RNN) that allow for past information to make informed predictions. LSTMs are able to do this without the exploding/vanishing gradient problem that can occur with RNNs. The data used were collected within the Everglades National Park as water depth time series. In this paper, a comparison of LSTMs is made to other methods such as ARIMA models and Holt-Winters models. 
 \end{doublespace}
