--- a/Deliverables/Written Component/writingproject.bib
+++ b/Deliverables/Written Component/writingproject.bib
@@ -136,3 +136,33 @@ abstract = {Time series clustering has been shown effective in providing useful 
  volume = {25},
  year = {2012}
 }
+
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT press}
+}
+
+@article{rumelhart1986learning,
+  title={Learning Internal Representations by Error Propagation, Parallel Distributed Processing, Explorations in the Microstructure of Cognition, ed. DE Rumelhart and J. McClelland. Vol. 1. 1986},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J},
+  journal={Biometrika},
+  volume={71},
+  pages={599--607},
+  year={1986}
+}
+
+@article{kalmanfilter,
+    Author = {Kalman, Rudolph Emil},
+    Title = {A New Approach to Linear Filtering and Prediction Problems},
+    Journal = {Transactions of the ASME--Journal of Basic Engineering},
+    Volume = {82},
+    Number = {Series D},
+    Pages = {35--45},
+    Year = {1960}
+}
