--- a/Deliverables/Written Component/body/rnn.tex
+++ b/Deliverables/Written Component/body/rnn.tex
@@ -19,4 +19,4 @@ Similarly, for the final prediction:
 \begin{equation*}
     y_3 = \sigma[w_1\cdot x_3 + w_3\cdot \sigma[w_1\cdot x_2 + w_3\cdot\sigma[w_1\cdot x_1 + b_1] + b_1] + b_1]\cdot w_2 + b_2
 \end{equation*}
-In the equations above, $w_1$ represents the weight applied to the input, $w_2$ represents the weight applied to the output of the hidden state, and $w_3$ represents the weight applied to past predictions in the current prediction. Similarly, $b_1$ represents the bias being added to the input and $b_2$ represents the bias added to the hidden layer's output. The notation of $\sigma[]$ indicates the activation being applied to whatever is within the brackets. If $w_3$ is a value above 1, this causes the value of $x_1$ to have a much larger impact on the final prediction than other inputs. To solve this, "memory" can be added to recurrent neural networks.
+In the equations above, $w_1$ represents the weight applied to the input, $w_2$ represents the weight applied to the output of the hidden state, and $w_3$ represents the weight applied to past predictions in the current prediction. Similarly, $b_1$ represents the bias being added to the input and $b_2$ represents the bias added to the hidden layer's output. If $w_3$ is a value above 1, this causes the value of $x_1$ to have a much larger impact on the final prediction than other inputs. To solve this, "memory" can be added to recurrent neural networks.
