--- a/Deliverables/Written Component/main.tex
+++ b/Deliverables/Written Component/main.tex
@@ -21,7 +21,7 @@
 \input{body/rnn} 
 \subsection{Long Short-Term Memory Networks}
 \input{body/lstm}
-\subsection{EVER Data}
+\subsection{EVER Data}\label{sec:EVER}
 \input{body/ever}
 %
 \section{Methods}\label{sec:methods}
@@ -37,8 +37,6 @@
 % natbib usage reference: http://merkel.texture.rocks/Latex/natbib.php
 \newpage
 \bibliographystyle{apalike}
-
-\nocite{*}
 
 \bibliography{writingproject.bib}
 
