--- a/Deliverables/Written Component/writingproject.bib
+++ b/Deliverables/Written Component/writingproject.bib
@@ -166,3 +166,11 @@ abstract = {Time series clustering has been shown effective in providing useful 
     Pages = {35--45},
     Year = {1960}
 }
+
+@misc{chollet2015keras,
+  title={Keras},
+  author={Chollet, Fran\c{c}ois and others},
+  year={2015},
+  howpublished={\url{https://keras.io}},
+}
+
