Importing Overleaf Files

--- a/Deliverables/Written Component/abstract.tex
+++ b/Deliverables/Written Component/abstract.tex
@@ -1,4 +1,4 @@
 \begin{doublespace}
 % This version of the abstract is for the presentation, likely needs to be updated for final report.
-Long Short-Term Memory (LSTM) networks are a special case of Recurrent Neural Networks (RNN) that allow for past information to make informed predictions. LSTMs are able to do this without the exploding/vanishing gradient problem that can occur with RNNs. The data used were collected within the Everglades National Park as water depth time series. In this paper, a comparison of LSTMs is made to other methods such as ARIMA models and Holt-Winters models. 
+Long Short-Term Memory (LSTM) networks are a special case of Recurrent Neural Networks (RNN) that allow for past information to be used for informed predictions. LSTMs solve a number of issues that arise in the fitting process of classical RNNs. Like all deep learning models, LSTMs require massive continuous time series to be trained properly. For this paper, data collected within the Everglades National Park were used as they met the criteria for appropriate training and testing data. In this paper, LSTMs are explained and compared to traditional time series forecasting models such as ARIMA and Holt-Winters models.
 \end{doublespace}
