--- a/Deliverables/Written Component/body/results.tex
+++ b/Deliverables/Written Component/body/results.tex
@@ -1,4 +1,4 @@
-While the overall performance of the LSTM is impressive, it is difficult to make statements about just how impressive without comparing the predictions to other popular forecasting methods. As alluded to in Section \ref{sec:intro}, an Autoregressive Integrated Moving Average (ARIMA) and a Holt-Winters Exponential Smoothing model were fit on the same training data used for the LSTM. The Holt-Winters model used triple exponential additive smoothing and the ARIMA model was fit using the `auto\_arima()' function within the `tsa' package, resulting in a $4^{th}$ order auto-regressive model. Each model was used to forecast 31 days past the training data and were compared to the observed water depths (see Figure \ref{fig:Comparison}).
+While the overall performance of the LSTM is impressive, it is difficult to make statements about just how impressive without comparing the predictions to other popular forecasting methods. As alluded to in Section \ref{sec:intro}, an Autoregressive Integrated Moving Average (ARIMA) and a Holt-Winters Exponential Smoothing model were fit on the same training data used for the LSTM. The Holt-Winters model used triple exponential additive smoothing and the ARIMA model was fit using the \texttt{auto\_arima()} function within the \texttt{statsmodels} package, resulting in a $4^{th}$ order auto-regressive model \citep{statsmodels}. Each model was used to generate forecasts with a horizon of 31 days past the last observed training data point, and were compared to the observed water depths (see Figure \ref{fig:Comparison}).
 
 \begin{figure}[ht]
     \centering
