--- a/Deliverables/Written Component/body/rnn.tex
+++ b/Deliverables/Written Component/body/rnn.tex
@@ -1,4 +1,4 @@
-Recurrent neural networks, or RNNs for short, are essentially multiple neural networks that feed into each other a specified number of times \citep{rumelhart1986learning}. Similar to traditional neural networks, these networks have an input layer, a hidden state, and an output layer. As recurrent patterns can be difficult to visualize, these networks are often visualized in an `unrolled' state. This is visualized in Figure \ref{fig:RNN}, where instead of the network looping back into itself 3 times, the 3 different time states are visualized as separate networks.
+Recurrent neural networks, or RNNs for short, are multiple neural networks that feed into each other a specified number of times \citep{rumelhart1986learning}. Similar to traditional neural networks, these networks have an input layer, a hidden state, and an output layer. As recurrent patterns can be difficult to visualize, these networks are often visualized in an `unrolled' state. This is visualized in Figure \ref{fig:RNN}, where instead of the network looping back into itself 3 times, the 3 different time states are visualized as separate networks.
 
 \begin{figure}[ht]
     \centering
