--- a/Deliverables/Written Component/main.tex
+++ b/Deliverables/Written Component/main.tex
@@ -3,6 +3,7 @@
 \usepackage{WPROJ} % Style file
 \usepackage{natbib} % For bibliography citations
 \usepackage[caption=false,subrefformat=parens,labelformat=parens]{subfig}
+\usepackage{placeins}
 
 \doublespacing
 \begin{document}
@@ -29,6 +30,10 @@
 %
 \section{Results}\label{sec:results}
 \input{body/results}
+\subsection{ARIMA Simulation Results}
+\input{body/arima_simulations}
+\subsection{SSM Simulation Results}
+\input{Written Component/body/ssm_simulation}
 \subsection{Reflection}
 \input{body/reflection}
 
