--- a/Deliverables/Written Component/writingproject.bib
+++ b/Deliverables/Written Component/writingproject.bib
@@ -118,9 +118,9 @@ abstract = {Time series clustering has been shown effective in providing useful 
   publisher={CRC press}
 }
 
-@article{understandinglstm,
-  title = {Understanding LSTM Networks},
-  author = {colah},
+@website{understandinglstm,
+  title = {Colah's Blog - Understanding LSTM Networks},
+  author = {Christopher Olah},
   year = {2015},
   url = {https://colah.github.io/posts/2015-08-Understanding-LSTMs/}
 }
@@ -180,4 +180,84 @@ abstract = {Time series clustering has been shown effective in providing useful 
   version={0.1.1},
   year={2024},
   url={https://github.com/astrogilda/tsbootstrap}
+}
+
+@inproceedings{statsmodels,
+  title={statsmodels: Econometric and statistical modeling with python},
+  author={Seabold, Skipper and Perktold, Josef},
+  booktitle={9th Python in Science Conference},
+  year={2010},
+}
+
+@inproceedings{somvanshi2016review,
+  title={A review of machine learning techniques using decision tree and support vector machine},
+  author={Somvanshi, Madan and Chavan, Pranjali and Tambade, Shital and Shinde, SV},
+  booktitle={2016 international conference on computing communication control and automation (ICCUBEA)},
+  pages={1--7},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{lepot2017interpolation,
+  title={Interpolation in time series: An introductive overview of existing methods, their performance criteria and uncertainty assessment},
+  author={Lepot, Mathieu and Aubin, Jean-Baptiste and Clemens, Fran{\c{c}}ois HLR},
+  journal={Water},
+  volume={9},
+  number={10},
+  pages={796},
+  year={2017},
+  publisher={MDPI}
+}
+
+@article{rojas1996backpropagation,
+  title={The backpropagation algorithm},
+  author={Rojas, Raul and Rojas, Ra{\'u}l},
+  journal={Neural networks: a systematic introduction},
+  pages={149--182},
+  year={1996},
+  publisher={Springer}
+}
+
+@misc{cuda,
+  author={NVIDIA and Vingelmann, Péter and Fitzek, Frank H.P.},
+  title={CUDA, release: 10.2.89},
+  year={2020},
+  url={https://developer.nvidia.com/cuda-toolkit},
+}
+
+@article{kitagawa1996monte,
+  title={Monte Carlo filter and smoother for non-Gaussian nonlinear state space models},
+  author={Kitagawa, Genshiro},
+  journal={Journal of computational and graphical statistics},
+  volume={5},
+  number={1},
+  pages={1--25},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
+
+@book{cowpertwait2009introductory,
+  title={Introductory time series with R},
+  author={Cowpertwait, Paul SP},
+  year={2009},
+  publisher={Springer Dordrecht Heidelberg}
+}
+
+@article{andrieu2010particle,
+  title={Particle markov chain monte carlo methods},
+  author={Andrieu, Christophe and Doucet, Arnaud and Holenstein, Roman},
+  journal={Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume={72},
+  number={3},
+  pages={269--342},
+  year={2010},
+  publisher={Oxford University Press}
+}
+
+@article{snoek2012practical,
+  title={Practical bayesian optimization of machine learning algorithms},
+  author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+  journal={Advances in neural information processing systems},
+  volume={25},
+  year={2012}
 }
